Fixed height overflow in doctor schedule

--- a/client/src/Pages/DoctorDashboard/Schedule/DoctorSchedule.module.css
+++ b/client/src/Pages/DoctorDashboard/Schedule/DoctorSchedule.module.css
@@ -1,26 +1,48 @@
 .DSContainer {
    margin-left: 16rem;
    display: flex;
-   justify-content: space-evenly;
-   width: 70%;
-   gap: 30px;
+   justify-content: space-between;
+   width: 83%;
    box-sizing: border-box;
-   margin-right: 0;
-   overflow-y: scroll;
+   gap: 5%;
 }
 .DSContainer1 {
    width: 70%;
    background-color: #ecf3fc;
-   border-radius: 20px 20px 0px 0px;
+   border-radius: 20px;
    padding: 20px;
+   height: 1000px;
 }
 .DSContainer2 {
-   width: 25%;
+   width: 300px;
    background-color: #ecf3fc;
-   border-radius: 20px 20px 0px 0px;
+   border-radius: 20px;
+   height: 500px;
+   overflow-y: scroll;
+}
+.DSContainer2::-webkit-scrollbar,
+.DSContainer2::-webkit-scrollbar {
+   width: 0.3rem;
+   height: 0.3rem;
+   cursor: pointer;
+}
+.DSContainer2::-webkit-scrollbar-track,
+.DSContainer2::-webkit-scrollbar-track {
+   margin: 20px;
+   cursor: pointer;
+   --webkit-box-shadow: inset 0 0 10px var(--white);
+}
+.DSContainer2::-webkit-scrollbar-thumb,
+.DSContainer2::-webkit-scrollbar-thumb {
+   background-color: var(--lightcol);
+   border-radius: 10%;
+   cursor: pointer;
 }
 .DSContainer1 label {
    display: block;
+   font-weight: 600;
+   font-size: 1.1rem;
+   color: #0d3f58;
 }
 .patientContainer {
    display: grid;
@@ -33,11 +55,6 @@
    border: 1px solid #e1e4e8;
    border-radius: 7px;
    text-align: center;
-}
-.DSContainer1 label {
-   font-weight: 600;
-   font-size: 1.3rem;
-   color: #0d3f58;
 }
 .DSContainer1 h2 {
    color: #0d3f58;
@@ -79,15 +96,22 @@
    height: 40px;
 }
 .DSbutton {
-   width: 30%;
-   height: 45px;
+   width: 100%;
+   height: 100%;
    border-radius: 7px;
    background: #05a6c2;
    color: white;
    display: block;
-   margin: 40px auto;
    font-weight: 700;
    font-size: 15px;
+   align-self: center;
+}
+.DSbuttondiv {
+   grid-row: 3/4;
+   grid-column: 1/3;
+   width: 13rem;
+   margin: 3.3rem auto 0 auto;
+   height: 2.5rem;
 }
 .DSbutton:hover {
    cursor: pointer;
@@ -102,7 +126,7 @@
    background-color: white;
    width: 95%;
    margin: auto;
-   height: 30vh;
+   height: 400px;
    border-radius: 20px;
    margin-top: 20px;
    text-align: center;
@@ -140,34 +164,31 @@
 }
 .appointmentContainer td {
    font-weight: 600;
-   font-size: 1.1rem;
+   font-size: 1rem;
    color: #0d3f58;
 }
 .DSContainer h2 {
    padding: 20px 0px;
 }
-.DSContainer2 {
-   text-align: center;
-}
 .DSContainer2 h2 {
    color: #0d3f58;
+   text-align: center;
 }
 .DSContainer2 ul {
-   text-align: left;
+   text-align: center;
    padding-left: 30px;
 }
 .DSContainer2 li {
    padding-top: 20px;
    font-weight: 600;
    color: #0d3f58;
-   font-size: 1.1rem;
+   font-size: 1rem;
 }
 /*Responsive*/
 @media (max-width: 1200px) {
    .DSContainer {
       width: 78%;
       margin-left: 15rem;
-      height: 90vh;
    }
    .DSContainer1 {
       width: 80%;
@@ -191,6 +212,14 @@
       height: 50vh;
       overflow: scroll;
       border-radius: 20px;
+   }
+   .DSbuttondiv {
+      width: 70%;
+      margin: 3.3rem auto 0 auto;
+   }
+   .DSbutton {
+      margin: 0 auto;
+      width: 100%;
    }
    .patientContainer {
       grid-column: 1/2;
@@ -248,16 +277,20 @@
       margin-left: 0;
       display: grid;
       width: auto;
+      height: 85rem;
       font-size: 1rem;
-      height: 150vh;
-      grid-template-columns: repeat(1, auto);
-      grid-template-rows: repeat(3, 1fr);
+      grid-template-columns: repeat(1, 1fr);
+      grid-template-rows: 0.4fr 0.3fr;
+      overflow-y: scroll;
    }
    .DSContainer1 {
-      width: 149%;
+      width: 78%;
+      margin-left: 10rem;
    }
    .DSContainer2 {
-      width: 149%;
+      width: 50%;
+      height: 400px;
+      margin: auto;
    }
    .appointmentContainer {
       height: 25%;
@@ -292,18 +325,20 @@
       display: grid;
       width: 100%;
       font-size: 1rem;
-      height: 220vh;
-      grid-template-columns: repeat(1, auto);
+      grid-template-columns: repeat(1, 1fr);
       grid-template-rows: repeat(3, 1fr);
+      height: 1800px;
    }
    .DSContainer1 {
       width: 100%;
       background-color: white;
+      margin-left: 0;
    }
    .DSContainer1 h2 {
       width: 100%;
       text-align: center;
       margin: auto;
+      font-size: 1.2rem;
    }
    .DSContainer1 form {
       grid-template-columns: repeat(1 1fr);
@@ -320,13 +355,14 @@
       align-self: center;
    }
    .appointmentContainer {
-      height: 50%;
+      height: 300px;
+      overflow-y: scroll;
    }
    .DSContainer2 {
       grid-column: 1/2;
       grid-row: 3/4;
       margin: auto;
-      width: 80%;
+      width: 50%;
    }
    .DSContainer2 ul {
       text-align: center;
@@ -358,13 +394,15 @@
       display: grid;
       width: 100%;
       font-size: 1rem;
-      height: 220vh;
       grid-template-columns: repeat(1, auto);
       grid-template-rows: repeat(3, 1fr);
+      height: 1700px;
+      overflow-y: scroll;
    }
    .DSContainer1 {
       width: 100%;
       background-color: white;
+      margin-left: 0;
    }
    .DSContainer1 h2 {
       width: 100%;
@@ -386,7 +424,8 @@
       align-self: center;
    }
    .appointmentContainer {
-      height: 50%;
+      height: 250px;
+      overflow-y: scroll;
    }
    .DSContainer2 {
       grid-column: 1/2;
@@ -417,6 +456,12 @@
       border-radius: 10%;
       cursor: pointer;
    }
+   .DSbutton {
+      width: 100%;
+   }
+   .DSbuttondiv {
+      width: 70%;
+   }
 }
 
 /*small mobile screens*/
@@ -426,14 +471,18 @@
       display: grid;
       width: 100%;
       font-size: 1rem;
-      height: 220vh;
-      grid-template-columns: repeat(1, auto);
-      grid-template-rows: repeat(3, 1fr);
+      gap: 0;
+      grid-template-columns: repeat(1, 1fr);
+      grid-template-rows: 0.6fr 0.4fr 0.5fr;
+      margin-left: 0;
+      height: 1800px;
+      overflow-y: scroll;
    }
 
    .DSContainer1 {
       width: 100%;
       background-color: white;
+      margin-left: 0;
    }
    .DSContainer1 h2 {
       width: 100%;
@@ -455,7 +504,7 @@
       align-self: center;
    }
    .appointmentContainer {
-      height: 30%;
+      height: 500px;
    }
    .DSContainer2 {
       grid-column: 1/2;
@@ -467,6 +516,12 @@
    .DSContainer2 ul {
       text-align: center;
       padding-left: 0;
+   }
+   .DSbutton {
+      width: 100%;
+   }
+   .DSbuttondiv {
+      width: 70%;
    }
    .DSContainer2::-webkit-scrollbar,
    .DSContainer2::-webkit-scrollbar {
